# Konfliktl-sungSimulator

./: .gitignore  CLAUDE.md  DESIGN.md  README.md
backend/: .env.example  pyproject.toml  test_simulation.py
backend/src/: __init__.py  main.py
backend/src/api/: scenarios.py  websocket.py
backend/src/core/: agents.py  graph.py  router.py  state.py
backend/src/db/: database.py
backend/src/models/: schemas.py
backend/src/prompts/: agent_a_default.txt  agent_b_default.txt  analyze_mediator.txt  analyze_party.txt  evaluator.txt
frontend/KonfliktSimulator/: Package.swift
frontend/KonfliktSimulator/Sources/KonfliktSimulator/: KonfliktSimulatorApp.swift
frontend/KonfliktSimulator/Sources/KonfliktSimulator/Models/: AgentConfig.swift  Message.swift  Session.swift
frontend/KonfliktSimulator/Sources/KonfliktSimulator/Resources/: Info.plist
frontend/KonfliktSimulator/Sources/KonfliktSimulator/Services/: ScenarioService.swift  WebSocketService.swift
frontend/KonfliktSimulator/Sources/KonfliktSimulator/ViewModels/: ChatViewModel.swift
frontend/KonfliktSimulator/Sources/KonfliktSimulator/Views/: AgentEditorView.swift  AnalysisView.swift  ChatView.swift  ContentView.swift  ScenarioManagerView.swift  SettingsView.swift
